# daqlib

./: CMakeLists.txt  README.md
include/rubberdaq/: ConnectionID.hpp  GenericCallback.hpp  IOManager.hpp  MockDataLinkHandler.hpp  Receiver.hpp  Sender.hpp  SerializerRegistry.hpp
plugins/: FooDAQModule.cpp  FooDAQModule.hpp
scripts/performance/: README.md  auto-discovery.py  create_pinning_minimal.py  perf-mode.sh
src/: DummyFunctionality.cpp  DummyFunctionality.hpp  Foo.hpp  FooDAQModule.cpp  FooDAQModule.hpp
test/apps/: test_hdf5_overhead_app.cxx  test_io_manager_app.cxx  test_mock_dlh_app.cxx  test_serreg_app.cxx  test_snb_torrent_app.cxx  test_snbt_tracker_app.cxx
